# otus_task4

./: .travis.yml  CMakeLists.txt  print_ip.cpp
html/: annotated.html  classes.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_0.md5  inherit_graph_1.dot  inherit_graph_1.md5  inherits.html  structis__list.html  structis__list__coll__graph.dot  structis__list__coll__graph.md5  structis__list__inherit__graph.dot  structis__list__inherit__graph.md5  structis__string.html  structis__string_3_01std_1_1string_01_4.html  structis__string_3_01std_1_1string_01_4__coll__graph.dot  structis__string_3_01std_1_1string_01_4__coll__graph.md5  structis__string_3_01std_1_1string_01_4__inherit__graph.dot  structis__string__coll__graph.dot  structis__string__coll__graph.md5  structis__string__inherit__graph.dot  structis__string__inherit__graph.md5  structis__vector.html  structis__vector_3_01std_1_1list_3_01_args_8_8_8_01_4_01_4.html  structis__vector_3_01std_1_1list_3_01_args_8_8_8_01_4_01_4__coll__graph.dot  structis__vector_3_01std_1_1list_3_01_args_8_8_8_01_4_01_4__coll__graph.md5  structis__vector_3_01std_1_1list_3_01_args_8_8_8_01_4_01_4__inherit__graph.dot  structis__vector_3_01std_1_1list_3_01_args_8_8_8_01_4_01_4__inherit__graph.md5  structis__vector_3_01std_1_1vector_3_01_args_8_8_8_01_4_01_4.html  structis__vector_3_01std_1_1vector_3_01_args_8_8_8_01_4_01_4__coll__graph.dot  structis__vector_3_01std_1_1vector_3_01_args_8_8_8_01_4_01_4__coll__graph.md5  structis__vector_3_01std_1_1vector_3_01_args_8_8_8_01_4_01_4__inherit__graph.dot  (+5 more)
(+35 files in other folders)
